buildscript {
    repositories {
        maven {
            url nexusUrl
            allowInsecureProtocol = true
            credentials {
                username nexusUsername
                password nexusPassword
            }
        }
    }
}

plugins {
    id 'java'
    id 'application'
}

group 'com.judell.java'
version '1.0'

sourceCompatibility = 18

repositories {
    flatDir {
        dir("character-validations")
    }
    mavenCentral()
    maven {
        metadataSources {
            artifact()
        }
        url nexusUrl
        allowInsecureProtocol = true
        credentials {
            username nexusUsername
            password nexusPassword
        }
    }
}

dependencies {
//    implementation 'com.kcl.validations:character-validations:2.0@JAR'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha0'
    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.0-alpha0'
    implementation group: 'javax.mail', name: 'javax.mail-api', version: '1.6.2'
    implementation group: 'org.json', name: 'json', version: '20190722'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha1'
    implementation group: 'com.newrelic.logging', name: 'log4j2', version: '2.0'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-log4j2', version: '2.5.6'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.4.1'
    implementation 'com.judell.libraries:character-validations:2.0@JAR'
    // https://mvnrepository.com/artifact/org.projectlombok/lombok
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'

    //Test
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation group: 'org.hamcrest', name: 'hamcrest-core', version: '2.2'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.7.0'
    // https://mvnrepository.com/artifact/org.mockito/mockito-core
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.6.1'
// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.2'
// https://mvnrepository.com/artifact/org.junit.vintage/junit-vintage-engine
    testImplementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '5.8.2'
}

mainClassName = 'com.judell.lab.Main'

tasks.named('test') {
    useJUnitPlatform()
}